# libscd

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: run_tests.yml
examples/embassy-scd40/: Cargo.toml  README.md
examples/embassy-scd40/.cargo/: config.toml
examples/embassy-scd40/src/: main.rs
examples/embassy-scd4x/: Cargo.toml
examples/embassy-scd4x/src/: main.rs
src/: error.rs  lib.rs  measurement.rs
src/asynchronous/: i2c.rs  mod.rs  scd30.rs  scd4x.rs
src/internal/: common.rs  communication.rs  crc.rs  measurement.rs  mod.rs  scd30.rs  scd4x.rs
src/synchronous/: i2c.rs  mod.rs  scd30.rs  scd4x.rs
tests/: i2c_addresses_are_public.rs  measurement_type_reexport.rs
