[package]
name = "libscd"
version = "0.1.0"
edition = "2021"

authors = ["Svetlin Zarev"]
repository = "https://github.com/SvetlinZarev/libscd"
license = "MIT OR Apache-2.0"
description = "Rust drivers for various SCD devices such as scd30 and scd4x CO2 sensors"
keywords = ["scd30", "scd40", "scd41", "sensirion", "driver"]
categories = ["embedded", "no-std"]
readme = "README.md"

exclude = ["/datasheets"]

[features]
defmt = ["dep:defmt"]
sync = ["dep:embedded-hal"]
async = ["dep:embedded-hal-async"]
scd40 = []
scd41 = []

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "0.3", optional = true }
