[package]
name = "libscd"
version = "0.5.1"
edition = "2021"

authors = ["Svetlin Zarev"]
repository = "https://github.com/SvetlinZarev/libscd"
license = "MIT"
description = "Rust drivers for various SCD devices such as scd30 and scd4x CO2 sensors"
keywords = ["scd30", "scd40", "scd41", "sensirion", "driver"]
categories = ["embedded", "no-std"]
readme = "README.md"

exclude = ["/datasheets", "/examples", "**/.*"]

[package.metadata.docs.rs]
all-features = true

[features]
defmt = ["dep:defmt"]
sync = ["dep:embedded-hal"]
async = ["dep:embedded-hal-async"]
scd30 = []
scd4x = []
scd41 = []

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "1", optional = true }
