[package]
name = "embassy-scd4x"
version = "0.0.0"
edition = "2021"


[dependencies]
### Core
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

### HAL
embedded-hal = "1"

### Embassy
embassy-stm32 = { version = "0.2", features = ["defmt", "stm32f411ce", "time-driver-tim3", "exti", "memory-x", "unstable-pac"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-8192", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

### Logging
defmt = "0.3"
defmt-rtt = "0.4"

### Sensors
[dependencies.libscd]
path = "../../"
features = ["sync", "scd4x", "defmt"]
